Added new Single Expense model to GET single-expense. DAT-2377
